<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>io.quarkiverse</groupId>
        <artifactId>quarkiverse-parent</artifactId>
        <version>16</version>
    </parent>
    <groupId>io.quarkiverse.reactivemessaging.nats-jetstream</groupId>
    <artifactId>quarkus-reactive-messsaging-nats-jetstream-parent</artifactId>
    <version>1.4.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>Quarkus Reactive Messsaging Nats Jetstream - Parent</name>
    <modules>
        <module>deployment</module>
        <module>runtime</module>
        <module>docs</module>
    </modules>
    <scm>
        <connection>scm:git:git@github.com:quarkiverse/quarkus-reactive-messsaging-nats-jetstream.git</connection>
        <developerConnection>scm:git:git@github.com:quarkiverse/quarkus-reactive-messsaging-nats-jetstream.git</developerConnection>
        <url>https://github.com/quarkiverse/quarkus-reactive-messsaging-nats-jetstream</url>
      <tag>HEAD</tag>
  </scm>
    <properties>
        <compiler-plugin.version>3.12.1</compiler-plugin.version>
        <maven.compiler.release>17</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <quarkus.version>3.7.3</quarkus.version>

        <jnats.version>2.17.3</jnats.version>
        <eddsa.version>0.3.0</eddsa.version>
        <smallrye-connector-attribute-processor.version>4.17.0</smallrye-connector-attribute-processor.version>
        <smallrye-reactive-messaging-otel.version>4.16.2</smallrye-reactive-messaging-otel.version>
        <microprofile-config-api.version>3.1</microprofile-config-api.version>
        <assertj-core.version>3.25.3</assertj-core.version>
    </properties>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>io.quarkus</groupId>
                <artifactId>quarkus-bom</artifactId>
                <version>${quarkus.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>io.nats</groupId>
                <artifactId>jnats</artifactId>
                <version>${jnats.version}</version>
            </dependency>
            <dependency>
                <groupId>net.i2p.crypto</groupId>
                <artifactId>eddsa</artifactId>
                <version>${eddsa.version}</version>
            </dependency>
            <dependency>
                <groupId>io.smallrye.reactive</groupId>
                <artifactId>smallrye-reactive-messaging-otel</artifactId>
                <version>${smallrye-reactive-messaging-otel.version}</version>
            </dependency>
            <dependency>
                <groupId>org.assertj</groupId>
                <artifactId>assertj-core</artifactId>
                <version>${assertj-core.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>io.quarkus</groupId>
                    <artifactId>quarkus-maven-plugin</artifactId>
                    <version>${quarkus.version}</version>
                </plugin>
                <plugin>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${compiler-plugin.version}</version>
                    <configuration>
                        <compilerArgs>
                            <arg>-parameters</arg>
                        </compilerArgs>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
    <profiles>
        <profile>
            <id>it</id>
            <activation>
                <property>
                    <name>performRelease</name>
                    <value>!true</value>
                </property>
            </activation>
            <modules>
                <module>integration-tests</module>
            </modules>
        </profile>
    </profiles>
</project>
